--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 .footer {
-    background-color: #969696;
     height: 45px;
     text-align: center;
+    background: linear-gradient(to left, #d800ff 0%, #330867 100%);
+    /*-webkit-background-clip: text;*/
+	  -webkit-text-fill-color: transparent;
 }
 
 .footer img {
