--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,41 +2,16 @@ header a {
     text-decoration: none !important;
 }
 
-.logo {
-    text-align: center;
-    font-size: 45px;
-    font-weight: bolder; 
-    font-family: 'Anton', sans-serif;
+.logo-app div{
+    font-family: 'Lily Script One', cursive;
+    display: inline-block;
+    margin-top: 43px;
+    background: linear-gradient(to left, #d800ff 0%, #330867 100%);
+    -webkit-background-clip: text;
+	  -webkit-text-fill-color: transparent;
 }
 
-.logo img {
-    margin-top: -50px;
+.logo-app img {
+    width: 80px;
+    height: 80px;
 }
-
-.logo .logo-text {
-    text-align: center !important;
-    color: #969696 !important;
-    padding: 0px !important;
-    margin-top: -170px;
-}
-
-.logo .logo-row {
-    margin-top: -20px;
-}
-
-.pitch {
-    text-align: center;
-    width: 50%;
-    margin: 0 auto;
-}
-
-@media screen and (max-width: 750px) {
-  .pitch {
-    width: 100%;
-  }
-}
-  
-.pitch p {
-    margin-top: 10px;
-}
-  
